Use full width as per MR comments

--- a/Common/Common.tex
+++ b/Common/Common.tex
@@ -59,9 +59,9 @@
 
 % handy for open questions
 \newcommand{\openquestion}[1]{#1\\[1em]%
-\underline{\hspace{14cm}}\\[1.5em]%
-\underline{\hspace{14cm}}\\[1.5em]%
-\underline{\hspace{14cm}}\\[1.5em]}
+\underline{\hspace{\textwidth}}\\[1.5em]%
+\underline{\hspace{\textwidth}}\\[1.5em]%
+\underline{\hspace{\textwidth}}\\[1.5em]}
 
 \newcounter{scaleCounter}
 \newcommand{\createLikertHeader}{
