remove table environment

--- a/GodSpeed/GodSpeed.tex
+++ b/GodSpeed/GodSpeed.tex
@@ -5,19 +5,19 @@
 \section*{Questionnaire}
 
 Please rate your impression of \robot{} on these scales:
-\begin{table}[h]
-  \centering
-    \csvreader[GSscale]{GodSpeed-items.csv}{}%
-    {\csvcoli & $\ocircle$ & $\ocircle$ & $\ocircle$ & $\ocircle$ & $\ocircle$ & \csvcolii}%
-\end{table}
+
+\begin{center}
+  \csvreader[GSscale]{GodSpeed-items.csv}{}%
+  {\csvcoli & $\ocircle$ & $\ocircle$ & $\ocircle$ & $\ocircle$ & $\ocircle$ & \csvcolii}%
+\end{center}
 
 \pagebreak
 
 Please rate your emotional state on these scales:
-\begin{table}[h]
-  \centering
-    \csvreader[GSscale]{GodSpeed-items-estate.csv}{}%
-    {\csvcoli & $\ocircle$ & $\ocircle$ & $\ocircle$ & $\ocircle$ & $\ocircle$ & \csvcolii}%
-\end{table}
+
+\begin{center}
+  \csvreader[GSscale]{GodSpeed-items-estate.csv}{}%
+  {\csvcoli & $\ocircle$ & $\ocircle$ & $\ocircle$ & $\ocircle$ & $\ocircle$ & \csvcolii}%
+\end{center}
 
 \end{document}
