--- a/RoSAS/RoSAS.tex
+++ b/RoSAS/RoSAS.tex
@@ -3,11 +3,12 @@
 \begin{document}
 
 \section*{Questionnaire}
-Using the scale provided, how closely are the following attributes associated with the robot?
-\begin{table}[h]
-  \centering
-    \csvreader[RSscale]{RoSAS-items.csv}{}%
-    {\csvcoli & $\ocircle$ & $\ocircle$ & $\ocircle$ & $\ocircle$ & $\ocircle$ & $\ocircle$ & $\ocircle$}%
-\end{table}
+
+Using the scale provided, how closely are the following attributes associated with \robot{}?
+
+\begin{center}
+  \csvreader[RSscale]{RoSAS-items.csv}{}%
+  {\csvcoli & $\ocircle$ & $\ocircle$ & $\ocircle$ & $\ocircle$ & $\ocircle$ & $\ocircle$ & $\ocircle$}%
+\end{center}
 
 \end{document}
