--- a/Common/Common.tex
+++ b/Common/Common.tex
@@ -7,13 +7,17 @@
   left = 20mm,
   top = 20mm,
   bottom = 15mm,
+  showframe
 ]{geometry}
+
+\usepackage{comment}
 
 % switch off page numbering
 \pagenumbering{gobble}
 
 % for breaking longer tables across pages
 \usepackage{longtable}
+
 
 % use for generating tables
 \usepackage{csvsimple}
@@ -26,9 +30,9 @@
 }
 
 \csvstyle{RSscale}{
-  tabular=r|c|c|c|c|c|c|c|, 
-  table head = 
-      & 1 & 2 & 3 & 4 & 5 & 6 & 7\\\hline, 
+  tabular=r|c|c|c|c|c|c|c|,
+  table head =
+      & 1 & 2 & 3 & 4 & 5 & 6 & 7\\\hline,
   late after line = \\\hline,
   head=false
 }
@@ -56,8 +60,20 @@
 % spacing for itemizes
 \usepackage{setspace}
 \setlength{\parindent}{0cm}
+
+%\setlist{noitemsep} % No spacing between list items
+%\setlist[itemize]{label=\textbullet, nosep, topsep=0pt, partopsep=0pt, parsep=0pt} % No spacing between itemize
+%\setlist[enumerate]{nosep, topsep=0pt, partopsep=0pt, parsep=0pt} % No spacing between enumerate
+
+
 % \doublespacing
-\setlist{leftmargin=1.5cm,itemsep=.5\baselineskip,before=\vspace{.5\baselineskip},after=\vspace{\baselineskip}}
+\setlist{
+    leftmargin=1.5cm,
+topsep=0pt,partopsep=0pt,
+    itemsep=.2\baselineskip,
+    before=\vspace{.5\baselineskip},
+    after=\vspace{.5\baselineskip}
+    }
 
 % define the robot's name
 \def \robot {the robot}%
@@ -71,9 +87,9 @@
 
 % handy for open questions
 \newcommand{\openquestion}[1]{#1\\[1em]%
-\underline{\hspace{\textwidth}}\\[1.5em]%
-\underline{\hspace{\textwidth}}\\[1.5em]%
-\underline{\hspace{\textwidth}}\\[1.5em]}
+\underline{\hspace{.9\textwidth}}\\[1.5em]%
+\underline{\hspace{.9\textwidth}}\\[1.5em]%
+\underline{\hspace{.9\textwidth}}\\[1.5em]}
 
 \newcounter{scaleCounter}
 \newcommand{\createLikertHeader}{
@@ -83,6 +99,49 @@
 
 % handy for likert-style questions
 \NewDocumentCommand{\likertquestion}{ O{Strongly disagree} O{Strongly agree} O{5} m }{%
+\setcounter{scaleCounter}{0}
+\def\ltablecfg{}
+\loop\ifnum\thescaleCounter<#3
+  \stepcounter{scaleCounter}
+  \edef\ltablecfg{%
+    \ltablecfg
+    c|
+  }%
+\repeat
+
+\setcounter{scaleCounter}{0}
+\def\lheader{}
+\loop\ifnum\thescaleCounter<#3
+  \stepcounter{scaleCounter}
+  \edef\lheader{%
+    \lheader
+    \arabic{scaleCounter} &
+  }%
+\repeat
+
+\setcounter{scaleCounter}{0}
+\def\lbullets{}
+\loop\ifnum\thescaleCounter<#3
+  \stepcounter{scaleCounter}
+  \edef\lbullets{%
+    \lbullets
+    $\ocircle$ &
+  }%
+\repeat
+
+\begin{center}%
+#4\\[1em]%
+\begin{tabular}{r|\ltablecfg l}%
+ & \lheader \\%
+\hline%
+#1 & \lbullets #2\\
+\hline%
+\end{tabular}%
+\\[2em]
+\end{center}%
+}
+
+\NewDocumentCommand{\fourlikert}{ O{Strongly disagree} O{Strongly agree} O{4} m }{%
 \setcounter{scaleCounter}{0}
 \def\ltablecfg{}
 \loop\ifnum\thescaleCounter<#3
