--- a/kuesioner.tex
+++ b/kuesioner.tex
@@ -7,20 +7,34 @@
 \section*{Kuesioner}
 \subsection*{Data Pribadi}
 
-Mohon beritahu informasi tentang anda:
-
 \begin{itemize}
-\item[Jenis Kelamin:] \underline{\hspace{1cm}} Pria \underline{\hspace{1cm}} Wanita
-\item[Umur:] \underline{\hspace{1cm}} Tahun
+\item[Partisipan\#:]\underline{\hspace{2cm}}
 \end{itemize}
 
+Jenis Kelamin:
+\begin{multicols}{2}
+\begin{itemize}
+\item[$\ocircle$] Laki-laki \item [$\ocircle$] Perempuan
+\end{itemize}
+\end{multicols}
+
 Ras:
+\begin{multicols}{3}
 \begin{itemize}
 \item[$\ocircle$] Bugis
-\item[$\ocircle$] Bukan Bugis
+\item[$\ocircle$] Makassar
+\item[$\ocircle$] Toraja
+\item[$\ocircle$] Duri
+\item[$\ocircle$] Lainnya \underline{\hspace{2cm}}
+\end{itemize}
+\end{multicols}
+
+\begin{itemize}
+\item[Tahun lahir:] \underline{\hspace{2cm}} Tahun
 \end{itemize}
 
 Pekerjaan:
+\begin{multicols}{3}
 \begin{itemize}
 \item[$\ocircle$] Karyawan
 \item[$\ocircle$] Wiraswasta
@@ -28,9 +42,29 @@ Pekerjaan:
 \item[$\ocircle$] Pelajar
 \item[$\ocircle$] Pensiun
 \end{itemize}
+\end{multicols}
+
 
 \subsection*{Pertanyaan 1}
-Daftar berikut berisikan 2 ruang yang ada di Tepi Laut Senggol. Silahkan nilai ruang tersebut berdasarkan tingkat keakraban pada skala 4 tingkat dimana:
+Jika uang, waktu, dan halangan lainnya bukan pertimbangan, ruang mana yang saudara lebih cenderungi untuk dikunjungi? Silakan nilai dengan skala poin 100  dimana ``1" artinya ``kurang dicenderungi" dan ``100" artinya "sangat dicenderungi".
+
+    \begin{tabular}{p{.38\textwidth} c}
+    \textbf{Ruang} & \textbf{Nilai kecenderungan}\\
+    \end{tabular}
+\vspace{10pt}
+
+\score{Ruang A}
+\score{Ruang B}
+
+\subsection*{Pertanyaan 2}
+\begin{itemize}
+    \item Mengapa saudara menyukai ruang tersebut? Deskripsikan dengan detail apa yang menarik menurut saudara tentang atribut ruang itu?
+
+    \item Bagaimana perasaan saudara saat memasuki ruang tersebut?
+\end{itemize}
+\begin{itemize}
+    \item Seberapa sering saudara menggunakan ruang tersebut?
+\end{itemize}
 
 \begin{description}
     \item [1] = Belum pernah dengar
@@ -44,21 +78,121 @@ Daftar berikut berisikan 2 ruang yang ada di Tepi Laut Senggol. Silahkan nilai r
   {\raggedleft \csvcoli & $\ocircle$ & $\ocircle$ & $\ocircle$ & $\ocircle$}%
 \end{center}
 
+\subsection*{Pertanyaan 3}
+Silakan nilai (centang) pendapat yang paling mewakili pendapat saudara dengan skala poin untuk setiap pernyataan. Dimana ``1" artinya tidak setuju ``5" artinya setuju. \\
 
-\pagebreak
 
-\subsection*{Pertanyaan 1a}
-Jika uang, waktu, dan halangan lainnya bukan pertimbangan, ruang mana berikut yang anda lebih sukai untuk dikunjungi? Silakan nilai dengan skala 100 tingkat dimana "1" artinya "kurang dicenderungi" dan 100 mewakili "sangat dicenderungi".
+Gunakan baris tambahan untuk komentar-komentar.
 
-    \begin{tabular}{p{.38\textwidth} c}
-    \textbf{Ruang} & \textbf{Nilai kecenderungan}\\
-    \end{tabular}
-\vspace{10pt}
+\begin{enumerate}[leftmargin=1em]
+    \item \fourlikert[][]{Jalan setapak membantu menuntun pengunjung ke ruang publik.}
+    \openquestion{\,}
 
-\score{Ruang A }
-\score{Ruang B }
+    \item \fourlikert[][]{Lahan parkir yang banyak adalah sangat baik untuk setiap orang.}
+    \openquestion{\,}
+
+    \item \fourlikert[][]{Tempat yang terbuka memudahkan ruang publik untuk dikenali.}
+    \openquestion{\,}
+
+    \item \fourlikert[][]{Ruang publik adalah tempat yang terakses dan inklusif secara sosial dan harus digunakan oleh setiap orang tanpa harus bayar.}
+    \openquestion{\,}
+
+%----------------------------------------------------------------------------------------
+
+    \item \fourlikert[][]{Saya kurang enak saat orang lain melihat apa yang saya lakukan.}
+    \openquestion{\,}
+
+    \item \fourlikert[][]{Pembatas atau jarak tempat duduk berkontribusi terhadap ruang pribadi (\textit{personal space}) setiap orang}
+    \openquestion{\,}
+
+    \item \fourlikert[][]{Vandalisme, sampah, grafiti memberikan kesan negatif ruang publik}
+    \openquestion{\,}
+
+    \item \fourlikert[][]{Lampu jalan atau taman dapat memberikan kesempatan untuk berwisata malam}
+    \openquestion{\,}
+
+%----------------------------------------------------------------------------------------
+
+    \item \fourlikert[][]{Dapat diterima untuk melepas vegetasi yang ada demi menambahkan pemandangan yang menyorot keindahan alam.}
+    \openquestion{\,}
+
+
+    \item \fourlikert[][]{Warna dan material lantai memberikan gaya pada ruang publik.}
+    \openquestion{\,}
+
+    \item \fourlikert[][]{Saya lebih mungkin mengunjungi ruang publik yang bersih dan terpelihara.}
+    \openquestion{\,}
+
+
+%----------------------------------------------------------------------------------------
+
+    \item \fourlikert[][]{Ruang komunal pada ruang publik diinginkan dan membantu interaksi sosial.}
+    \openquestion{\,}
+
+    \item \fourlikert[][]{Beberapa aktifitas seperti olahraga, diizinkan di ruang publik (seperti berenang, skateboard \& sepeda).}
+    \openquestion{\,}
+
+    \item \fourlikert[][]{Area alami di ruang publik memberikan jalan keluar dari tekanan hidup.}
+    \openquestion{\,}
+
+    \item \fourlikert[][]{Ruang gerak yang lebih banyak sangat baik untuk setiap orang.}
+    \openquestion{\,}
+\end{enumerate}
+
+
 \begin{comment}
+\newpage
+\textbf{Kognitif}
+\begin{enumerate}
+    \item Area alami di kota memberikan jalan keluar dari tekanan kehidupan kota.
+    \item Taman kota dan jalan setapak dapat memberikan kesempatan untuk belajar tentang alam.
+    \item Bangunan atau struktur bersejarah yang dijaga di taman berkontribusi kepada pemahaman komunitas sejarawan.
+\end{enumerate}
 
+\textbf{Ekologi}
+\begin{enumerate}
+    \item Dapat diterima untuk membatasi akses ke semua tempat di taman untuk melindungi spesies atau proses alami yang penting.
+    \item Taman perkotaan dan jalan setapak seharusnya menyorot keindahan penanaman naturalisasi, diadopsi ke kondisi lokal untuk menambah habitat spesies.
+    \item Taman perkotaan dan ruang hijau adalah rumah untuk beragam tanaman dan hewan yang harus dilindungi.
+    \item
+\end{enumerate}
+
+\textbf{Partisipatif}
+\begin{enumerate}
+    \item Jaringan tanaman dan jalan setapak yang terhubung dapat berfungsi sebagai rute transit alternatif ke jalan untuk bukan pengguna motor.
+    \item Jalan setapak taman dan kota seringkali merupakan jalan pintas dan alternatif aman untuk jalan yang banyak diperdagangkan.
+    \item Dalam sebuah taman, saya seringkali tertanggu oleh permainan riuh orang lain.
+\end{enumerate}
+
+\textbf{Adil}
+
+\begin{enumerate}
+    \item Taman dimaksudkan sebagai ruang "hanya anak"
+    \item Taman inklusif secara sosial dan tempat aksessibel dan harus digunakan oleh siapa saja tanpa pengecualian atau biaya masuk
+    \item Beberapa aktivitas seperti olahraga ekstrim dan alternatif, tidak diizinkan dilingkungan perkotaan lainnya, diizinkan di taman atau sepanjang setapak kota(seperti skateboard, sepeda bmx, skating)
+\end{enumerate}
+
+\textbf{Ekonomi}
+\begin{enumerate}
+    \item penggunaan komersial yang lebih banyak adalah sangat bagus untuk setiap orang
+    \item festival dan produksi pada taman diinginkan dan membawa pendapatan tambahan kepada komunitas
+    \item bisnis kecil, terletak di taman dapat memberikan pelayanan dan barang-barang kepada pengunjung taman.
+\end{enumerate}
+
+\textbf{Sensorik}
+\begin{enumerate}
+    \item seni publik, terletak di taman perkotaan dapat berkontribusi kepada identitas komunitas sekitar
+    \item Dapat diterima melepas vegetasi yang ada untuk meningkatkan pemandangan yang signifikan, yang menonjolkan keindahan alam
+    \item Saya lebih mungkin mengunjungi taman dan setapak perkotaaan di musim panas
+\end{enumerate}
+
+
+
+
+
+
+
+\section*{Others}
 \subsection*{Pertanyaan 2}
 %Follow this article Preferences of older people for environmental attributes of local parks- The use of choice‐based conjoint analysis
 Silahkan tunjukkan seberapa pentingnya fitur ruang berikut ini ketika mencari tempat di tepi laut.
@@ -69,11 +203,11 @@ Silahkan tunjukkan seberapa pentingnya fitur ruang berikut ini ketika mencari te
 \likertquestion[Tidak Penting][Penting]{Keamanan}
 \likertquestion[Tidak Penting][Penting]{Pemeliharaan}
 
-\end{comment}
+
 \subsection*{Pertanyaan 2}
 Silahkan tunjukkan seberapa pentingnya fitur ruang berikut ini ketika mencari tempat di tepi laut.
 %% Akses
-\likertquestion[Tidak Penting][Penting]{Lebar sebuah jalan.}
+\likertquestion[Tidak Penting][Sangat Penting]{Lebar sebuah jalan.}
 \likertquestion[Tidak Penting][Penting]{Kedekatan fasilitas.}
 %% Fasilitas
 \likertquestion[Tidak Penting][Penting]{Kehadiran fitur buatan (cth. bangku, lampu jalan).}
@@ -191,6 +325,7 @@ Silahkan nilai presepsi anda terhadap ruang-ruang di kawasan tepi laut dalam hal
   {\raggedleft \csvcoli & $\ocircle$ & $\ocircle$ & $\ocircle$ & $\ocircle$ & $\ocircle$ & $\ocircle$ & $\ocircle$}%
 \end{center}
 
+\end{comment}
 %-------------------------------------------------------------------------------------
 % Reference
 %-------------------------------------------------------------------------------------
